--- a/public/css/common.css
+++ b/public/css/common.css
@@ -303,11 +303,14 @@ body.sidebar-close .main {
 .mb-20 {
   margin-bottom: 20px;
 }
+.mb-20-ipt {
+  margin-bottom: 20px !important;
+}
 .mb-30 {
   margin-bottom: 30px;
 }
-.mb-20-ipt {
-  margin-bottom: 20px !important;
+.mb-100 {
+  margin-bottom: 100px;
 }
 .ml-10 {
   margin-left: 10px;
