--- a/public/css/common.css
+++ b/public/css/common.css
@@ -300,6 +300,9 @@ body.sidebar-close .main {
 .mb-10 {
   margin-bottom: 10px;
 }
+.mb-15 {
+  margin-bottom: 15px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
